infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'

spec:
  rules:
    - host: hotel.test
      http:
        paths:
          - path: /api/brand/?(.*)
            pathType: Prefix
            backend:
              service:
                name: brand-srv
                port:
                  number: 3000 
          - path: /api/hotel/?(.*)
            pathType: Prefix
            backend:
              service:
                name: hotel-srv
                port:
                  number: 3000 
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
